# rust_fibonacci

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: fibonacci_benchmark.rs
src/: lib.rs
