[package]
name = "rust_fibonacci"
version = "0.1.0"
authors = ["Ulysse McConnell <ulysse.mcconnell+dev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "fibonacci_benchmark"
harness = false
